--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,52 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.section {
+  height: 50vh;
+  display: flex;
+}
+
+.code-section {
+  background: #060606;
+}
+
+.container {
+  padding: 12px;
+  flex-grow: 1;
+  flex-basis: 0;
+  display: flex;
+  flex-direction: column;
+  background: #060606;
+  .title {
+    text-transform: uppercase;
+    border-radius: 10px 10px 0 0;
+    background: #1d1e22;
+    color: #aaaea8;
+    display: flex;
+    justify-content: space-between;
+    padding: 12px;
+    .title-icon {
+      display: flex;
+      align-items: center;
+    }
+  }
+  .file-type-icon {
+    width: 20px;
+    margin-right: 10px;
+  }
+  .CodeMirror {
+    height: 100% !important;
+  }
+  .codemirror {
+    flex-grow: 1;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    // overflow: hidden;
+  }
+}
